--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
+        <span data-node-name="name">Hale</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
@@ -37,7 +37,7 @@
         <strong data-node-name="text4Adjective">special</strong>.</p>
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You are Special</span>
+        <span data-node-name="text5Content">You are Special<small>(since am far away)</small></span>
         <span class="smiley" data-node-name="smiley">:)</span>
       </p>
       <p class="idea-6">
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/photo_2025-02-17_12-54-07.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
